# knowledge-graph-agent

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  =0.7.0  API_USAGE_GUIDE.md  CI-CD-SETUP-SUMMARY.md  Dockerfile  Makefile  Q2_IMPLEMENTATION_SUMMARY.md  README_API_FILES.md  REFACTORING-SUMMARY.md  REPOSITORY_LISTING_IMPLEMENTATION.md  appSettings.json  debug_q2_api.py  demo_generic_qa.py  demo_script.py  docker-compose.prod.yml  docker-compose.yml  indexed_commits.json  inspect_chroma.py  main.py  pyproject.toml  pytest.ini  query_patterns.example.json  requirements-dev.txt  requirements.txt  run_tests.py  setup.cfg  source-references.patch  test_api_endpoints.py  test_generic_qa.py  test_generic_qa_simple.py  test_q2_actual.py  test_q2_final_validation.py  test_q2_fixes.py  test_q2_integration.py  test_repository_listing.py  test_step_definitions.py  validate_ci_setup.py  (+1 more)
.github/: copilot-instructions.md
debug/: debug_chroma_data.py  debug_indexing_issue.py  debug_indexing_workflow.py  debug_q2_flow.py  debug_vector_store.py  demo_q2_feature.py  demo_q2_prompt.py  demo_repository_listing.py  fix_chroma_dimension.py  inspect_chroma.py  simple_memgraph_test.py  test_graph_endpoint_fix.py  test_memgraph_connection.py  test_memgraph_connection_clean.py
docs/: GIT_LOADER_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_PLAN_AI_AGENT_GENERIC_QA.md  Interact-questions.md  agent-interact-question.md  chroma-dimension-fixes.md  ci-cd-setup.md  event-flow-implementation-guide.md  git-based-loader-implementation-plan.md  graph-queries.md  implementation-plan-20250719.md  implementation-plan.md  incremental-reindexing.md  knowledge-graph-overview.md  langgraph-memgraph-integration-plan.md  langgraph-workflows-detailed.md  memgraph-connection-fix.md  presentation_guide.md  pydantic-deprecation-warning-fix.md  pytest-collection-warning-fix.md  query-patterns-configuration.md  query-workflow-refactoring-plan.md  task-2.1-completion-summary.md  test-fixes-summary.md  test-questions.md  todo-list.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/: __init__.py  _version.py
templates/: generic_qa_templates.json
test-all/: README.md  TEST_FILES_SUMMARY.md  __init__.py  api_test_suite.py  quick_demo.py  run_all_tests.py  test_advanced.py  test_agent.py  test_chat.py  test_health.py
tests/: __init__.py  run_tests.py  test_api_response.py  test_car_web_client_loading.py  test_chroma_fixes.py  test_ci_pipeline.sh  test_confidence_constants.py  test_q2_feature.py  (+13 more)
(+160 files in other folders)
